--- a/jisr_almaharat/templates/hf_base.html
+++ b/jisr_almaharat/templates/hf_base.html
@@ -41,7 +41,7 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="/" class="d-flex align-items-center">
-            <span class="sitename">FlexStart</span>
+            <span class="sitename">JISR AL_MHARAT</span>
           </a>
           <div class="footer-contact pt-3">
             <p>A108 Adam Street</p>
@@ -56,8 +56,8 @@
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Jobs</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Traning</a></li>
           </ul>
         </div>
 
@@ -86,12 +86,13 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">FlexStart</strong> <span>All Rights Reserved</span></p>
-      <div class="credits">
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">JISR AL_MHARAT</strong> <span>All Rights Reserved</span>
+      </p>
+      <!-- <div class="credits">
 
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a
           href=“https://themewagon.com>ThemeWagon
-      </div>
+      </div> -->
     </div>
 
   </footer>
@@ -114,7 +115,7 @@
   <script src="/assets/jisr_almaharat/site_assets/js/main.js"></script>
 
   <!-- start code Frappy Resorces footer CSS and File -->
-  <script type="text/javascript" src="/assets/frappe/dist/js/libs.bundle.6XLVBACU.js"></script>
+  <!-- <script type="text/javascript" src="/assets/frappe/dist/js/libs.bundle.6XLVBACU.js"></script>
 
   <script type="text/javascript" src="/assets/frappe/dist/js/desk.bundle.TZ4SWY4F.js"></script>
 
@@ -126,7 +127,7 @@
 
   <script type="text/javascript" src="/assets/frappe/dist/js/report.bundle.KXSQEBQX.js"></script>
 
-  <script type="text/javascript" src="/assets/frappe/dist/js/telemetry.bundle.D5NSGVQ2.js"></script>
+  <script type="text/javascript" src="/assets/frappe/dist/js/telemetry.bundle.D5NSGVQ2.js"></script> -->
   <script>frappe.csrf_token = "{{frappe.session.csrf_token}}";</script>
 
 </body>
