--- a/jisr_almaharat/templates/includes/job/job_card.html
+++ b/jisr_almaharat/templates/includes/job/job_card.html
@@ -78,9 +78,12 @@
   </style>
   {% if Job_info|length >3 %}
   <div class="sticky-apply">
-    <a href="/" class="btn btn-apply">Get More..</a>
+    <a href="/Home/more_job.html" class="btn btn-apply">Get More..</a>
 
   </div>
+  <!-- </div>
+  <a class="btn btn-primary py-3 px-5" href="/Home/more_job.html">Browse More Jobs</a>
+  </div> -->
 
   {% endif %}
 </section>
