--- a/jisr_almaharat/templates/includes/head/head.html
+++ b/jisr_almaharat/templates/includes/head/head.html
@@ -34,14 +34,14 @@
   <!-- Template Stylesheet -->
   <link href="/assets/jisr_almaharat/site_assets/css/style.css" rel="stylesheet">
 
-
+  <script src="/assets/jisr_almaharat/www/js/jobDetails"></script>
 
   <!--start code Frappy Resorces Heade CSS and File -->
 
   <link rel="shortcut icon" href="/assets/frappe/images/frappe-favicon.svg" type="image/x-icon">
-  <!-- <link rel="icon" href="/assets/frappe/images/frappe-favicon.svg" type="image/x-icon">
-  <link type="text/css" rel="stylesheet" href="/assets/frappe/dist/css/desk.bundle.574QPYBR.css">
-  <link type="text/css" rel="stylesheet" href="/assets/frappe/dist/css/report.bundle.QPFCEETQ.css"> -->
+  <link rel="icon" href="/assets/frappe/images/frappe-favicon.svg" type="image/x-icon">
+  <!-- <link type="text/css" rel="stylesheet" href="/assets/frappe/dist/css/desk.bundle.EVWW3ODV.css">
+  <link type="text/css" rel="stylesheet" href="/assets/frappe/dist/css/report.bundle.AD5IZNPY.css"> -->
 
   <script>
     window.frappe = {};
