Modyfiy: fit the web theme

--- a/jisr_almaharat/templates/includes/job/job_card.html
+++ b/jisr_almaharat/templates/includes/job/job_card.html
@@ -3,8 +3,8 @@
 
   <!-- Section Title -->
   <div class="container section-title" data-aos="fade-up">
-    <h2>New JOBS</h2>
-    <p>Recent posts form our Jobs</p>
+    <!-- <h2>New JOBS</h2> -->
+    <p>Recent Jobs</p>
   </div><!-- End Section Title -->
 
   <div class="container">
