--- a/jisr_almaharat/templates/hf_base.html
+++ b/jisr_almaharat/templates/hf_base.html
@@ -18,7 +18,7 @@
 
   <!-- Section begin For Footer -->
   <footer id="footer" class="footer">
-
+<!-- 
     <div class="footer-newsletter">
       <div class="container">
         <div class="row justify-content-center text-center">
@@ -83,15 +83,10 @@
         </div>
 
       </div>
-    </div>
+    </div> -->
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">FlexStart</strong> <span>All Rights Reserved</span></p>
-      <div class="credits">
-
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a
-          href=“https://themewagon.com>ThemeWagon
-      </div>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">JISR AL-MHARAT</strong> <span>All Rights Reserved</span></p>
     </div>
 
   </footer>
