add login page and update main.css

--- a/jisr_almaharat/templates/includes/head/head.html
+++ b/jisr_almaharat/templates/includes/head/head.html
@@ -34,7 +34,7 @@
   <!-- Template Stylesheet -->
   <link href="/assets/jisr_almaharat/site_assets/css/style.css" rel="stylesheet">
 
-  <script src="/assets/jisr_almaharat/www/js/jobDetails"></script>
+  <!-- <script src="/assets/jisr_almaharat/www/js/jobDetails"></script> -->
 
   <!--start code Frappy Resorces Heade CSS and File -->
 
