--- a/jisr_almaharat/programming_module/doctype/training/templates/training.html
+++ b/jisr_almaharat/programming_module/doctype/training/templates/training.html
@@ -5,31 +5,32 @@
 {%  set organization = frappe.get_doc("Organization", doc.organization) %}
 
 
-<h1>{{ title }} <span class="badge badge-{{'primary' if doc.training_status== "Available" else 'secondary'}}">{{doc.training_status}}</span> </h1>
+<h1>{{ title }} <span class="badge badge-{{'primary' if doc.status== "Available" else 'secondary'}}" >{{doc.status}}</span> </h1>
 
-<p><strong>Training Application Date</strong></p>
-<p> <li>From  {{training_post_date}} To  <span style="color:red">{{aplication_deadline}}</span></li> </p>
-
-
-<p><strong>Training Kind</strong> : {{training_pattren}}</p>
-
-<p><strong>Trainig Location</strong> {{doc.location}}</p>
+<p><strong>Job Application Date</strong></p>
+<p> <li>From  {{posting_date}} To  <span style="color:red">{{aplication_deadline}}</span></li> </p>
 
 
-<p><strong>Training Requireds</strong></p>
+<p><strong>Jop Location</strong> : {{jop_location}}</p>
+
+<p><strong>Time</strong> {{doc.jop_type}}</p>
+
+<p><strong>Salary Range :</strong> {{ salary_range if doc.salary_range != 0 else 'Not Mentioned' }}</p>
+
+<p><strong>Job Requireds</strong></p>
 <ul>
     {% for required in required_skills %}
         <li>{{required.skill}}</li>
     {% endfor %}
 </ul>
 
-<p><strong>Training Description</strong></p>
-<p>{{ about_training }}</p>
+<p><strong>Jop Description</strong></p>
+<p>{{ jop_description}}</p>
 
 <h4>Company Name: {{organization.organization_name}}</h4>
-<a href="/trainings" class="btn btn-info">Back</a>
+<a href="/jobs" class="btn btn-info">Back</a>
 <!-- <a href="/book-appointment/new?clinc={{doc.name}}" class="btn btn-info">Book Appointment</a> -->
-<a href="/application/new?application_name={{doc.training_title}}&kind=Training" class="btn btn-primary">Application Now</a>
+<a href="/application/new?application_name={{doc.jop_title}}&kind=Job" class="btn btn-primary">Application Now</a>
 
 
 {% endblock %}
