Fix: fix some issues

--- a/jisr_almaharat/templates/includes/head/header.html
+++ b/jisr_almaharat/templates/includes/head/header.html
@@ -29,7 +29,7 @@
     <a class="btn-getstarted flex-md-shrink-0" href="/login#login">LOGIN</a>
     <a class="btn-getstarted flex-md-shrink-0" href="/login#signup">Register</a>
 
-    <a class="btn-getstarted flex-md-shrink-0" href="/app/organization-dashboa">
+    <a class="btn-getstarted flex-md-shrink-0" href="/organization-dashboa/#">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle"
         viewBox="0 0 16 16">
         <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
@@ -38,5 +38,6 @@
       </svg>
       Profile
     </a>
+    <button onclick="window.location.href='/app/dashboa'">go dash</button>
   </div>
 </header>
