Add:add Filter job ctegories and some Emproevments

--- a/jisr_almaharat/templates/hf_base.html
+++ b/jisr_almaharat/templates/hf_base.html
@@ -110,14 +110,14 @@
   <!-- <script src="/assets/jisr_almaharat/site_assets/js/main.js"></script> -->
   <script src="/assets/jisr_almaharat/www/js/jobDetails.js"></script>
 
-  <!-- start code Frappy Resorces footer CSS and File -->
+  <!-- start code Frappy Resorces footer CSS and File 
   <script type="text/javascript" src="/assets/frappe/dist/js/libs.bundle.LLRFRX7M.js"></script>
   <script type="text/javascript" src="/assets/frappe/dist/js/desk.bundle.2IFOND6P.js"></script>
   <script type="text/javascript" src="/assets/frappe/dist/js/list.bundle.ISZURXE6.js"></script>
   <script type="text/javascript" src="/assets/frappe/dist/js/form.bundle.AI6Z24LU.js"></script>
   <script type="text/javascript" src="/assets/frappe/dist/js/controls.bundle.6RQE6LT7.js"></script>
   <script type="text/javascript" src="/assets/frappe/dist/js/report.bundle.PJRT22DR.js"></script>
-  <script type="text/javascript" src="/assets/frappe/dist/js/telemetry.bundle.R3LXKXJ3.js"></script>
+  <script type="text/javascript" src="/assets/frappe/dist/js/telemetry.bundle.R3LXKXJ3.js"></script>-->
   <script>frappe.csrf_token = "{{frappe.session.csrf_token}}";</script>
 
 </body>
