--- a/jisr_almaharat/templates/includes/Popular/categories.html
+++ b/jisr_almaharat/templates/includes/Popular/categories.html
@@ -5,56 +5,56 @@
             <h1 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">Explore By Category</h1>
             <div class="row g-4">
                 <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <a class="cat-item rounded p-4" href="more_categoris.html">
+                    <a class="cat-item rounded p-4" href="filter-categories/more_categoris_1.html">
                         <i class="fa fa-3x fa-mail-bulk text-primary mb-4"></i>
                         <h6 class="mb-3">Marketing</h6>
                         <p class="mb-0">jobs for Marketing</p>
                     </a>
                 </div>
                 <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <a class="cat-item rounded p-4" href="more_categoris.html">
+                    <a class="cat-item rounded p-4" href="filter-categories/more_categoris_2.html">
                         <i class="fa fa-3x fa-headset text-primary mb-4"></i>
                         <h6 class="mb-3">Customer Service</h6>
                         <p class="mb-0">Jobs for Customer Service</p>
                     </a>
                 </div>
                 <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <a class="cat-item rounded p-4" href="more_categoris.html">
+                    <a class="cat-item rounded p-4" href="filter-categories/more_categoris_3.html">
                         <i class="fa fa-3x fa-user-tie text-primary mb-4"></i>
                         <h6 class="mb-3">Human Resource</h6>
                         <p class="mb-0">Jobs for Human Resource</p>
                     </a>
                 </div>
                 <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
-                    <a class="cat-item rounded p-4" href="more_categoris.html">
+                    <a class="cat-item rounded p-4" href="filter-categories/more_categoris_4.html">
                         <i class="fa fa-3x fa-tasks text-primary mb-4"></i>
                         <h6 class="mb-3">Project Management</h6>
                         <p class="mb-0">Jobs For Project Managment</p>
                     </a>
                 </div>
                 <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <a class="cat-item rounded p-4" href="more_categoris.html">
+                    <a class="cat-item rounded p-4" href="filter-categories/more_categoris_5.html">
                         <i class="fa fa-3x fa-chart-line text-primary mb-4"></i>
                         <h6 class="mb-3">Business Development</h6>
                         <p class="mb-0">Jobs For Business Development </p>
                     </a>
                 </div>
                 <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <a class="cat-item rounded p-4" href="more_categoris.html">
+                    <a class="cat-item rounded p-4" href="filter-categories/more_categoris_6.html">
                         <i class="fa fa-3x fa-hands-helping text-primary mb-4"></i>
                         <h6 class="mb-3">Sales & Communication</h6>
                         <p class="mb-0">Jobs For Sales & Communication</p>
                     </a>
                 </div>
                 <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <a class="cat-item rounded p-4" href="more_categoris.html">
+                    <a class="cat-item rounded p-4" href="filter-categories/more_categoris_7.html">
                         <i class="fa fa-3x fa-book-reader text-primary mb-4"></i>
                         <h6 class="mb-3">Teaching & Education</h6>
                         <p class="mb-0">Jobs For Teaching & Education</p>
                     </a>
                 </div>
                 <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
-                    <a class="cat-item rounded p-4" href="more_categoris.html">
+                    <a class="cat-item rounded p-4" href="filter-categories/more_categoris_8.html">
                         <i class="fa fa-3x fa-drafting-compass text-primary mb-4"></i>
                         <h6 class="mb-3">Design & Creative</h6>
                         <p class="mb-1">Jobs For Design & Creative</p>
