--- a/jisr_almaharat/templates/includes/head/header.html
+++ b/jisr_almaharat/templates/includes/head/header.html
@@ -30,14 +30,14 @@
       {% elif 'Organization Role' in user_data.roles %}/app/organization-dashboa
       {% elif 'User Role' in user_data.roles %}/app/user-dashboard
       {% endif %}"
-    id="profileBtn" style="display: none;">
+    id="profileBtn" style="display: none; {% if not ('Administrator' in user_data.roles or 'Organization Role' in user_data.roles or 'User Role' in user_data.roles) %}background: gray;{% endif %}">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle"
         viewBox="0 0 16 16">
         <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
         <path fill-rule="evenodd"
           d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
       </svg>
-      <span id="username">Profile</span>
+      <span>Profile</span>
     </a>
 
   </div>
