--- a/jisr_almaharat/templates/includes/training/training_card.html
+++ b/jisr_almaharat/templates/includes/training/training_card.html
@@ -10,7 +10,10 @@
       </div>
 
       <div class="row gx-5">
-        {% for training in Training_info[:3] %}
+         <!-- Filter Training by status "Available" and sort by creation_date -->
+        {% set available_training = Training_info|selectattr('training_status', 'eq', 'Available')|sort(attribute='creation_date', reverse=true) %}
+
+        {% for training in available_training[:3] %}
           <div class="col-lg-4 mb-5">
               <div class="card h-100 shadow border-0">
                   <!-- <img src="/assets/jisr_almaharat/site_assets/img/blog/blog-1.jpg" class="img-fluid" alt=""> -->
@@ -29,7 +32,7 @@
                                   alt="..." />
                               <div class="small">
                                   <div class="fw-bold">By {{ training.organization_name}}</div>
-                                  <div class="text-muted">From {{ training.training_post_date }} To {{ training.aplication_deadline}}</div>
+                                  <div class="text-muted">End at {{ training.aplication_deadline}}</div>
                                   
                               </div>
                               <a href="/Home/training_details/{{training.name}}" class="readmore stretched-link"></a>
