--- a/jisr_almaharat/templates/includes/head/header.html
+++ b/jisr_almaharat/templates/includes/head/header.html
@@ -8,7 +8,7 @@
     <!-- // change then to be active on click -->
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="/Home/index.html">Home</a></li>
         <li><a href="/Home/more_job.html">Jobs</a></li>
         <li><a href="/Home/more_training.html">Trainings</a></li>
       </ul>
